index logos and CSS

--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title>Little Lemon</title>
+  <meta name="description" content="Little Lemon is owned by two Italian brothers, Mario and Adrian, who moved to the United States to pursue their shared dream of owning a restaurant. ">
+  <meta name="author" content="Little Lemon brothers ">
+
+  <!-- Open Graph Protocol -->
+  <!--
+  <meta property="og:title" content="A brief description">
+  <meta property="og:type"  content="website">
+  <meta property="og:url"   content="https://www.mysite">
+  <meta property="og:description" content="A brief description">
+  <meta property="og:image" content="image.png">
+  -->
+
+  <!--
+  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  -->
+
+  <!-- Include your CSS files here -->
+  <link rel="stylesheet" href="./styles.css">
+</head>
+
+<body>
+  <header>
+    <!-- Add your website name or logo here -->
+    <img src="/Little-lemon-logos/Asset 16@4x.png" alt="Little Lemon official Logo">
+  </header>
+  <nav>
+    <!-- Add your website navigation here -->
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+  </nav>
+  <main>
+    <!-- Add your main content here -->
+    <h1>Heading</h1>
+  </main>
+  <footer>
+    <!-- Add copyright notices and other footer content here -->
+    <p>Footer</p>
+  </footer>
+
+  <!-- Include your JavaScript files here -->
+  <script src="js/scripts.js"></script>
+</body>
+
+</html>
