--- a/index.html
+++ b/index.html
@@ -36,19 +36,43 @@
   <nav>
     <!-- Add your website navigation here -->
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><a href="#">Homepage</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Menu</a></li>
+        <li><a href="#">Contact Us</a></li>
     </ul>
   </nav>
   <main>
     <!-- Add your main content here -->
-    <h1>Heading</h1>
+    <section>
+      <article>
+        <h2>Healthier Choice</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel ante convallis, viverra elit at, convallis lacus. Integer aliquet diam ligula, in efficitur libero hendrerit non. Praesent convallis magna tempus enim porttitor lobortis. Quisque pellentesque nulla eget ligula vulputate, non laoreet quam sagittis. Pellentesque consequat justo ipsum, quis bibendum nisl tristique nec. Quisque magna lorem, fermentum a massa non, volutpat posuere velit. Integer elementum egestas blandit. Vestibulum vel enim tincidunt, consectetur risus eu, gravida mauris. Quisque sed felis mi. Vivamus laoreet mauris non venenatis porttitor. Curabitur imperdiet, nisl id pharetra tristique, ante diam accumsan leo, et varius sem erat vitae est. Duis mollis tristique diam, et faucibus nisl accumsan in. Aenean venenatis laoreet ex, ut aliquam nibh commodo vel. Nullam blandit justo ut orci ultricies mollis id ac mi.</p>
+      </article>
+    </section>
+    <section>
+      <article>
+        <h3>Article 1</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel ante convallis, viverra elit at, convallis lacus. Integer aliquet diam ligula, in efficitur libero hendrerit non. Praesent convallis magna tempus enim porttitor lobortis. Quisque pellentesque nulla eget ligula vulputate, non laoreet quam sagittis. Pellentesque consequat justo ipsum, quis bibendum nisl tristique nec. Quisque magna lorem, fermentum a massa non, volutpat posuere velit. Integer elementum egestas blandit. Vestibulum vel enim tincidunt, consectetur risus eu, gravida mauris. Quisque sed felis mi. Vivamus laoreet mauris non venenatis porttitor. Curabitur imperdiet, nisl id pharetra tristique, ante diam accumsan leo, et varius sem erat vitae est. Duis mollis tristique diam, et faucibus nisl accumsan in. Aenean venenatis laoreet ex, ut aliquam nibh commodo vel. Nullam blandit justo ut orci ultricies mollis id ac mi.</p>
+      </article>
+      <article>
+        <h3>Arictle 2</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel ante convallis, viverra elit at, convallis lacus. Integer aliquet diam ligula, in efficitur libero hendrerit non. Praesent convallis magna tempus enim porttitor lobortis. Quisque pellentesque nulla eget ligula vulputate, non laoreet quam sagittis. Pellentesque consequat justo ipsum, quis bibendum nisl tristique nec. Quisque magna lorem, fermentum a massa non, volutpat posuere velit. Integer elementum egestas blandit. Vestibulum vel enim tincidunt, consectetur risus eu, gravida mauris. Quisque sed felis mi. Vivamus laoreet mauris non venenatis porttitor. Curabitur imperdiet, nisl id pharetra tristique, ante diam accumsan leo, et varius sem erat vitae est. Duis mollis tristique diam, et faucibus nisl accumsan in. Aenean venenatis laoreet ex, ut aliquam nibh commodo vel. Nullam blandit justo ut orci ultricies mollis id ac mi.</p>
+      </article>
+      <article>
+        <h3>Arictle 3</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel ante convallis, viverra elit at, convallis lacus. Integer aliquet diam ligula, in efficitur libero hendrerit non. Praesent convallis magna tempus enim porttitor lobortis. Quisque pellentesque nulla eget ligula vulputate, non laoreet quam sagittis. Pellentesque consequat justo ipsum, quis bibendum nisl tristique nec. Quisque magna lorem, fermentum a massa non, volutpat posuere velit. Integer elementum egestas blandit. Vestibulum vel enim tincidunt, consectetur risus eu, gravida mauris. Quisque sed felis mi. Vivamus laoreet mauris non venenatis porttitor. Curabitur imperdiet, nisl id pharetra tristique, ante diam accumsan leo, et varius sem erat vitae est. Duis mollis tristique diam, et faucibus nisl accumsan in. Aenean venenatis laoreet ex, ut aliquam nibh commodo vel. Nullam blandit justo ut orci ultricies mollis id ac mi.</p>
+      </article>
+    </section>
   </main>
   <footer>
     <!-- Add copyright notices and other footer content here -->
-    <p>Footer</p>
+    <div>
+      <img src="./Little-lemon-logos/Asset 7@4x.png" alt="mini littlelemon logo">
+    </div>
+    <div>
+      <p>copyright @ LittleLemon</p>
+    </div>
   </footer>
 
   <!-- Include your JavaScript files here -->
